gitops/components/keycloak/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-idp
  labels:
    app.kubernetes.io/part-of: banking-demo
    cluster: east
