gitops/components/keycloak/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: banking-keycloak
  namespace: banking-idp
  labels:
    app.kubernetes.io/name: keycloak
spec:
  # Must match Keycloak CR hostname (and OIDC issuer used by Spring apps).
  host: keycloak-banking.apps.cluster-4487j.4487j.sandbox2772.opentlc.com
  to:
    kind: Service
    name: banking-keycloak-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
